[package]
name = "azalea"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
buffer = { git = "https://github.com/ghostlyzsh/azalea-protocol", branch = "main", version = "0.1.0" }
